DuckDB course: lessons 5-8 (C#, Java, performance, persistence) in en/fr/es
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0183GuiFvnd2RNhjh26yQXAD